# rust-search

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.COMMERCIAL.md  README.md
.github/workflows/: release.yml
srс/: indexer.rs  lib.rs  main.rs  models.rs  search_engine.rs  web_server.rs
