[package]
name = "rust-search"
version = "0.2.0"
edition = "2021"
authors = ["Psqnn <ppasa5684@gmail.com>"]
description = "⚡ High-performance sled BwTree full-text search engine"
license = "GPL-3.0-or-later"
repository = "https://github.com/psqnn/rust-search"

[dependencies]
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors"], optional = true }
walkdir = "2"
md5 = "0.7"
indicatif = "0.17"

[features]
default = ["server"]
server = ["axum", "tower", "tower-http"]

[[bin]]
name = "rust-search"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
